udpate: edit game Cards - more control add

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditBanner/EditBannerSingleSection/EditBannerSingleSection.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditBanner/EditBannerSingleSection/EditBannerSingleSection.module.css
@@ -5,27 +5,15 @@
 	align-items: center;
 	margin-top: 1rem;
 }
-.headerBtn {
+.headerBtnContainer {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
 }
 
-.headerBtn button {
+.btn {
 	padding: 0.5rem 1rem;
-	position: relative;
 	border-radius: 4px;
-}
-
-.clearBtn {
-	background-color: #00000000;
-	border: 1px solid #ffffffc2;
-	color: #ffffffc2;
-}
-.resetBtn {
-	background-color: #c6ebffad;
-	color: #000000;
-	border: transparent;
 }
 
 .marginTop {
