--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/Components/EditGameCardAddCard/EditGameCardAddCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/Components/EditGameCardAddCard/EditGameCardAddCard.module.css
@@ -4,7 +4,7 @@
 
 .addGameCard {
 	width: 100%;
-	padding-bottom: calc(100% / 0.583785322);
+	padding-bottom: calc(100% / 0.57);
 	position: relative;
 }
 
