udpate: editGameCards outer object added to store all data. minor fix: drawer footer css

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/EditGameCardContainer/EditGameCardContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/EditGameCardContainer/EditGameCardContainer.module.css
@@ -16,3 +16,17 @@
 	padding: 0.5rem 1rem;
 	border-radius: 4px;
 }
+.deleteModalFooter {
+	display: flex;
+	justify-content: flex-end;
+	gap: 1rem;
+}
+
+.yesBtn {
+	background-color: rgb(153, 0, 0);
+	color: white;
+}
+.noBtn {
+	background-color: rgba(0, 255, 0, 0.5);
+	color: white;
+}
