--- a/src/Shared/TextField/TextField/TextField.module.css
+++ b/src/Shared/TextField/TextField/TextField.module.css
@@ -7,16 +7,16 @@
 	position: relative;
 	background-color: rgba(255, 255, 255, 0.05);
 	backface-visibility: hidden;
-	border: 2px solid transparent;
+	outline: 2px solid transparent;
 	border-radius: 4px;
 	font-size: 1rem;
 	display: flex;
 	flex-direction: column;
-	transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: outline 150ms cubic-bezier(0.4, 0, 0.2, 1);
 	overflow: hidden;
 }
 .error {
-	border: 2px solid #cc2a24;
+	outline: 2px solid #cc2a24;
 }
 #errorColor {
 	color: #cc2a24;
@@ -67,7 +67,7 @@
 }
 
 .focusBorder {
-	border: 2px solid rgba(1, 81, 185, 0.733);
+	outline: 2px solid rgba(1, 81, 185, 0.733);
 }
 
 .textarea {
