--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
@@ -1,12 +1,13 @@
 .container {
 	width: 100%;
 	background-color: rgba(255, 255, 255, 0.05);
-	border: 2px solid transparent;
+	outline: 2px solid transparent;
+	border: none;
 	border-radius: 4px;
 	font-size: 1rem;
 	position: relative;
 	transition:
-		border 0.2s ease,
+		outline 200ms cubic-bezier(0.4, 0, 0.2, 1),
 		opacity 200ms;
 	color: rgb(173, 173, 173);
 }
@@ -93,14 +94,14 @@
 	color: #cc2a24;
 }
 .error {
-	border: 2px solid #cc2a24;
+	outline: 2px solid #cc2a24;
 }
 
 .selected {
 	opacity: 1;
 }
 .focusBorder {
-	border: 2px solid rgba(1, 81, 185, 0.733);
+	outline: 2px solid rgba(1, 81, 185, 0.733);
 }
 
 .previewBtn {
