--- a/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
@@ -14,7 +14,8 @@
 .fileUploadButton {
 	width: 100%;
 	height: 100%;
-	border: 2px solid transparent;
+	outline: 2px solid transparent;
+	border: none;
 	padding: 25px 40px 15px 10px;
 	text-align: left;
 	position: relative;
@@ -23,13 +24,14 @@
 	border-radius: 4px;
 	cursor: pointer;
 	overflow: hidden;
+	transition: outline 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .errorBorder {
-	border: 2px solid #cc2a24;
+	outline: 2px solid #cc2a24;
 }
 .activeBorder {
-	border: 2px solid rgba(1, 81, 185, 0.733);
+	outline: 2px solid rgba(1, 81, 185, 0.733);
 }
 .fileUploadButton:disabled {
 	cursor: default;
