--- a/src/Shared/SelectionField/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField/SelectionField.module.css
@@ -7,9 +7,10 @@
 	height: 100%;
 	background-color: rgba(255, 255, 255, 0.05);
 	border-radius: 4px;
-	border: 2px solid transparent;
+	outline: 2px solid transparent;
+	border: none;
 	cursor: pointer;
-	transition: border 200ms cubic-bezier(0, 0, 0.2, 1);
+	transition: outline 200ms cubic-bezier(0, 0, 0.2, 1);
 	font-size: 1rem;
 }
 .label {
@@ -53,7 +54,7 @@
 	color: rgb(140, 140, 140);
 }
 .focusBorder {
-	border: 2px solid rgba(1, 81, 185, 0.733);
+	outline: 2px solid rgba(1, 81, 185, 0.733);
 }
 
 .list::-webkit-scrollbar {
@@ -80,7 +81,7 @@
 }
 
 .errorBorder {
-	border: 2px solid #cc2a24;
+	outline: 2px solid #cc2a24;
 	border-radius: 4px;
 }
 
