update: adjust margin and padding in game card components; add error handling for card validation

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardFirstPart/EditGameCardFirstPart.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardFirstPart/EditGameCardFirstPart.module.css
@@ -1,3 +1,7 @@
+.editGameCardFirstPartContainer .editGameCardContainer:not(:last-child) {
+	margin-bottom: 3rem;
+}
+
 .firstRowHeader {
 	margin-top: 1rem;
 	font-weight: 400;
