--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardOtherPart/EditGameCardOtherPart.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardOtherPart/EditGameCardOtherPart.module.css
@@ -1,3 +1,6 @@
+.editGameCardOtherPartContainer .editGameCardContainer:not(:last-of-type) {
+	margin-bottom: 3rem;
+}
 .editGameCardOtherPart h3 {
 	margin-top: 1rem;
 	font-weight: 400;
