--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/EditGameCards/EditGameCards.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/EditGameCards/EditGameCards.module.css
@@ -12,3 +12,10 @@
 .saveBtn {
 	margin-top: 1rem;
 }
+.okBtn {
+	width: 100%;
+	padding: 0.5rem 1rem;
+	border-radius: 4px;
+	background-color: #388e3c;
+	color: white;
+}
