--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/Components/CardDotList/CardDotList.module.css
@@ -2,41 +2,30 @@
 	position: absolute;
 	list-style: none;
 	padding: 5px 10px;
-	border-radius: 4px;
+	border-radius: 0.5rem;
 	overflow: hidden;
 	z-index: 1;
 	opacity: 0;
 	scale: 0.7;
+	background-color: #18181ce0;
+	backdrop-filter: blur(5px);
+	-web-kit-backdrop-filter: blur(5px);
 	transition:
 		opacity 200ms,
 		scale 200ms;
 }
 
-.listContainer::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: -1;
-	background-color: #18181cd0;
-	backdrop-filter: blur(50px);
-	-web-kit-backdrop-filter: blur(50px);
-}
-
 .bottom {
-	top: 100%;
-	left: 50%;
-	translate: -50%;
+	top: calc(100% + 2px);
+	right: -0.5rem;
 }
 
 .left {
 	top: 0;
-	right: 100%;
+	right: calc(100% + 2px);
 }
 .top {
-	bottom: 100%;
+	bottom: calc(100% + 2px);
 	left: 50%;
 	translate: -50%;
 }
