--- a/src/Shared/GameCards/Components/HorizontalCards/HorizontalCards.module.css
+++ b/src/Shared/GameCards/Components/HorizontalCards/HorizontalCards.module.css
@@ -1,8 +1,7 @@
 .cards {
 	padding: 20px 0.5rem;
-	width: calc(100% + 1rem);
+	margin: 0 -0.5rem;
 	max-width: 100vw;
-	translate: -0.5rem;
 	overflow-x: hidden;
 }
 
