--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/DiscoverBanner/DiscoverBanner.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/DiscoverBanner/DiscoverBanner.module.css
@@ -1,6 +1,7 @@
 .banner {
 	position: relative;
-	margin: 5rem 0;
+	margin-top: 4.5rem;
+	margin-bottom: 8rem;
 	user-select: none;
 	width: 100%;
 }
