--- a/src/Shared/GameCards/Components/GameCardsHeader/GameCardsHeader.module.css
+++ b/src/Shared/GameCards/Components/GameCardsHeader/GameCardsHeader.module.css
@@ -3,18 +3,23 @@
 	display: inline;
 	color: rgb(222, 222, 222);
 	cursor: pointer;
-	flex-grow: 1;
 	font-size: 18px;
 	font-weight: 400;
 	max-width: fit-content;
+	display: flex;
+	align-items: center;
+}
+.arrow {
+	display: flex;
+	align-items: center;
 }
 
 .arrow svg {
-	width: 10px;
-	height: 10px;
+	width: 1.3rem;
+	height: 1.3rem;
 	transition: translate 100ms;
 }
 
 .cardsHeader:hover .arrow svg {
-	translate: 100%;
+	translate: 0.5rem;
 }
