--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItem/DiscoverBannerItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItem/DiscoverBannerItem.module.css
@@ -33,7 +33,7 @@
 	color: rgb(30, 30, 30);
 	transition: 200ms cubic-bezier(0.17, 0.17, 0.23, 1);
 }
-.itemButton:hover button {
+.itemButton button:hover {
 	cursor: pointer;
 	background-color: rgba(255, 255, 255, 0);
 	color: white;
