--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/Components/EventGamesGameColumn/EventGamesGameInColumn.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGamesColumn/Components/EventGamesGameColumn/EventGamesGameInColumn.module.css
@@ -14,6 +14,9 @@
 .gameImageContainer {
 	width: 25%;
 	position: relative;
+	display: flex;
+	align-items: center;
+	flex-shrink: 0;
 }
 
 .image {
@@ -36,6 +39,13 @@
 .name {
 	font-size: 14px;
 	font-weight: 400;
+	/* after two line if breaks more than elleps */
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	line-clamp: 2;
+	-webkit-box-orient: vertical;
 }
 
 .aspectRatioClassName {
