--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
@@ -1,17 +1,18 @@
 .container {
-	margin-bottom: 3rem;
+	margin: 2rem 0;
 	width: 100%;
 	max-width: 1600px;
 }
 
 .eventGamesContainer {
-	margin: 0 -1rem;
+	overflow: hidden;
+	width: 100%;
 }
 
 .eventGames {
-	width: 100%;
 	display: flex;
 	list-style: none;
+	margin: 0 -1rem;
 }
 .arrowBtn {
 	position: sticky;
@@ -26,21 +27,9 @@
 	rotate: 90deg;
 }
 
-@media only screen and (max-width: 1023px) {
-	.container {
-		padding: 0 1rem;
-	}
-}
-
 @media only screen and (max-width: 768px) {
-	.eventGamesContainer {
-		overflow: hidden;
-	}
 	.eventGames {
-		width: 100%;
-		left: 5px;
 		transition: translate 400ms;
 		position: relative;
-		column-gap: 0rem;
 	}
 }
