--- a/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 90vh;
 	min-height: 500px;
+	margin: 2rem 0;
 }
 
 .exploreGamesBackground {
@@ -73,7 +74,7 @@
 	font-size: 14px;
 }
 
-.exploreTexts a {
+.exploreTexts button {
 	position: relative;
 	padding: 1rem 2rem;
 	border-radius: 5px;
@@ -87,13 +88,10 @@
 	border: 1px solid white;
 	font-size: 14px;
 }
-.exploreTexts a:hover {
+.exploreTexts button:hover {
 	background-color: rgba(0, 0, 0, 0.4);
 	color: white;
 	border: 1px solid white;
-}
-.exploreTexts a:active {
-	background-color: rgb(78, 78, 78);
 }
 
 @media only screen and (max-width: 768px) {
@@ -106,7 +104,7 @@
 		font-size: 14px;
 	}
 	.exploreTexts p,
-	.exploreTexts a {
+	.exploreTexts button {
 		font-size: 12px;
 	}
 	.exploreGames {
@@ -126,7 +124,7 @@
 	}
 }
 @media only screen and (max-width: 267px) {
-	.exploreTexts a {
+	.exploreTexts button {
 		padding: 0.5rem 1rem;
 	}
 }
@@ -135,7 +133,7 @@
 		font-size: 18px;
 	}
 	.exploreTexts p,
-	.exploreTexts a {
+	.exploreTexts button {
 		font-size: 16px;
 	}
 }
