--- a/src/Pages/MainContent/Pages/Discover/Discover/Discover.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Discover/Discover.module.css
@@ -1,8 +1,17 @@
 .discover {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 0;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	z-index: 0;
 }
 
+.content {
+	width: 100%;
+}
+
+@media screen and (max-width: 1023px) {
+	.content {
+		width: calc(100% - 1rem);
+	}
+}
