--- a/src/Shared/Tooltip/TooltipBody/TooltipBody.module.css
+++ b/src/Shared/Tooltip/TooltipBody/TooltipBody.module.css
@@ -5,8 +5,8 @@
 	left: 0;
 	top: 0;
 	transition:
-		opacity 2000ms,
-		translate 2000ms;
+		opacity 200ms,
+		translate 200ms;
 	z-index: 1;
 	background-color: #222222c0;
 	border-radius: 4px;
@@ -14,6 +14,16 @@
 	-webkit-backdrop-filter: blur(10px);
 	width: auto;
 	height: auto;
+}
+
+.toolTips p {
+	position: relative;
+	color: white;
+	font-size: 12px;
+	padding: 1rem;
+	opacity: 0.8;
+	max-width: 250px;
+	width: max-content;
 }
 
 .top::after,
